--- a/index.html
+++ b/index.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Goulart LCS</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+</head>
+<style>
+    :root {
+        font-size: 93.75%;
+    }
 
-  <head>
-      <meta charset="utf-8" />
-      <title>Goulart LCS</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <meta name="description" content="" />
-      <meta name="keywords" content="seo, marketing, social media, instagram, facebook, google" />
-      <meta content="Themesdesign" name="author" />
-      <!-- favicon -->
-      <link rel="shortcut icon" href="images/favicon.ico" />
-  </head>
+    body {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
 
-  <body style="display: flex; align-items: center; justify-items: center;">
-    <h1 style="">Hi strange, welcole to Goulart LCS!</h1>
-  </body>
+        background-color: #0D0126;
+
+        width: 100%;
+        min-height: 100vh;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        font-family: 'Poppins', sans-serif;
+    }
+
+    div {
+        margin: 2rem 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+
+    span {
+        margin: 0;
+        color: #F29849;
+        font-weight: 300;
+        font-size: 1rem;
+    }
+
+    h1 {
+        margin: 0;
+        color: #F20530;
+        font-weight: 700;
+        font-size: 2rem;
+    }
+</style>
+<body>
+    <div>
+        <span>Hello, world!</span>
+        <h1>Welcome to Goulart LCS</h1>
+    </div>
+</body>
 </html>
